Last Version, with screens shot of some UIs, Hope you Like it ^^

--- a/DecAntique/DecAntique/View/Base.lproj/LaunchScreen.storyboard
+++ b/DecAntique/DecAntique/View/Base.lproj/LaunchScreen.storyboard
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,7 +19,6 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.45000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackGroundDarkMode" translatesAutoresizingMaskIntoConstraints="NO" id="Cld-y1-7id">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" name="Tint"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="udq-n4-EEz">
                                 <rect key="frame" x="20.5" y="334" width="373" height="228"/>
@@ -29,7 +28,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pfg-bY-7hK"/>
-                        <color key="backgroundColor" name="Tint"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="udq-n4-EEz" firstAttribute="width" secondItem="FC4-dE-WaS" secondAttribute="width" multiplier="0.9" id="MiS-hg-0iT"/>
                             <constraint firstItem="Cld-y1-7id" firstAttribute="top" secondItem="FC4-dE-WaS" secondAttribute="top" id="RYB-Ue-GD2"/>
@@ -49,8 +48,8 @@
     <resources>
         <image name="BackGroundDarkMode" width="564" height="845"/>
         <image name="Logo" width="614" height="376"/>
-        <namedColor name="Tint">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
